@startuml
left to right direction
package "taskt.Core.Automation.Commands"{
class "FilterDataTableColumnByRowValueCommand" <<sealed>> {
+RunCommand() : void 
-cmbTargetType_SelectionChangeCommited() : void 
-cmbFilterAction_SelectionChangeCommited() : void 
+AfterShown() : void 
+BeforeValidate() : void 
+v_TargetDataTable : String <<get>> <<set>> 
+v_RowIndex : String <<get>> <<set>> 
+v_ValueType : String <<get>> <<set>> 
+v_FilterAction : String <<get>> <<set>> 
+v_FilterActionParameterTable : DataTable <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
abstract class "ADataTableCreateFromDataTableCommands"{
+{abstract} v_TargetDataTable : String <<get>> <<set>> <<abstract>> 
+v_NewDataTable : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IDataTableRowPositionProperties" {
+{abstract} v_RowIndex : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IFilterValueProperties" {
+{abstract} v_ValueType : String <<get>> <<set>> <<abstract>> 
+{abstract} v_FilterAction : String <<get>> <<set>> <<abstract>> 
+{abstract} v_FilterActionParameterTable : DataTable <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IHaveDataTableElements" {
+{abstract} BeforeValidate() : void <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
abstract class "ScriptCommand"{
+RunCommand() : void 
+RunCommand() : void 
+GetDisplayValue() : String
+Render() : List
+Render() : List
+AfterShown() : void 
+Refresh() : void 
+BeforeValidate() : void 
+IsValidate() : Boolean
+ConvertToIntermediate() : void 
+ConvertToIntermediate() : void 
+ConvertToRaw() : void 
+ConvertToRaw() : void 
+Clone() : ScriptCommand
+CheckMatched() : Boolean
+Replace() : Boolean
+AddInstance() : void 
+RemoveInstance() : void 
+CommandID : String <<get>> <<set>> 
+CommandName : String <<get>> <<set>> 
+IsCommented : Boolean <<get>> <<set>> 
+SelectionName : String <<get>> <<set>> 
+DefaultPause : Int32 <<get>> <<set>> 
+LineNumber : Int32 <<get>> <<set>> 
+PauseBeforeExeucution : Boolean <<get>> <<set>> 
+DisplayForeColor : Color <<get>> <<set>> 
+v_Comment : String <<get>> <<set>> 
+CommandEnabled : Boolean <<get>> <<set>> 
+IsValid : Boolean <<get>> <<protected set>>
+IsWarning : Boolean <<get>> <<protected set>>
+validationResult : String <<get>> <<protected set>>
+IsMatched : Boolean <<get>> <<protected set>>
+IsDontSavedCommand : Boolean <<get>> <<set>> 
+IsNewInsertedCommand : Boolean <<get>> <<set>> 
+CustomRendering : Boolean <<get>> <<set>> 
+ControlsList : Dictionary <<get>> 
+RenderedControls : List<System.Windows.Forms.Control>
#_ControlsList : Dictionary<string, System.Windows.Forms.Control>
}
}

package "taskt.Core.Automation.Commands"{
Interface "IDataTableCreateFromDataTableProperties" {
+{abstract} v_TargetDataTable : String <<get>> <<set>> <<abstract>> 
+{abstract} v_NewDataTable : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IExpandableProperties" {
}
}

package "taskt.Core.Automation.Commands"{
Interface "IUIParameterProperties" {
+{abstract} ControlsList : Dictionary <<get>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICommandIDProperties" {
+{abstract} CommandID : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICanHandleDataTable" {
}
}

taskt.Core.Automation.Commands.FilterDataTableColumnByRowValueCommand --|> taskt.Core.Automation.Commands.ADataTableCreateFromDataTableCommands
taskt.Core.Automation.Commands.FilterDataTableColumnByRowValueCommand ..|> taskt.Core.Automation.Commands.IDataTableRowPositionProperties
taskt.Core.Automation.Commands.FilterDataTableColumnByRowValueCommand ..|> taskt.Core.Automation.Commands.IFilterValueProperties
taskt.Core.Automation.Commands.FilterDataTableColumnByRowValueCommand ..|> taskt.Core.Automation.Commands.IHaveDataTableElements
taskt.Core.Automation.Commands.ADataTableCreateFromDataTableCommands --|> taskt.Core.Automation.Commands.ScriptCommand
taskt.Core.Automation.Commands.ADataTableCreateFromDataTableCommands ..|> taskt.Core.Automation.Commands.IDataTableCreateFromDataTableProperties
taskt.Core.Automation.Commands.IDataTableRowPositionProperties --|> taskt.Core.Automation.Commands.IExpandableProperties
taskt.Core.Automation.Commands.IFilterValueProperties --|> taskt.Core.Automation.Commands.IExpandableProperties
taskt.Core.Automation.Commands.ScriptCommand ..|> taskt.Core.Automation.Commands.IUIParameterProperties
taskt.Core.Automation.Commands.ScriptCommand ..|> taskt.Core.Automation.Commands.ICommandIDProperties
taskt.Core.Automation.Commands.IDataTableCreateFromDataTableProperties --|> taskt.Core.Automation.Commands.IExpandableProperties
taskt.Core.Automation.Commands.IDataTableCreateFromDataTableProperties --|> taskt.Core.Automation.Commands.ICanHandleDataTable
taskt.Core.Automation.Commands.ICanHandleDataTable --|> taskt.Core.Automation.Commands.IExpandableProperties
@enduml